feat: track perf metrics

--- a/dustland.html
+++ b/dustland.html
@@ -56,6 +56,7 @@
           <button class="btn" id="resetBtn">Reset</button>
           <button class="btn" id="settingsBtn">Settings</button>
           <button class="btn" id="fxBtn">FX</button>
+          <button class="btn" id="perfBtn">Perf</button>
         </div>
         </div>
       </aside>
@@ -126,6 +127,20 @@
           <input type="number" id="fxOffsetY" step="1" />
         </div>
         <button class="btn" id="fxClose">Close</button>
+      </main>
+    </div>
+  </div>
+
+  <!-- Performance Debug Panel -->
+  <div id="perfPanel">
+    <div class="win">
+      <header>Perf Debug</header>
+      <main>
+        <canvas id="perfCanvas" width="300" height="80"></canvas>
+        <div>SFX: <span id="perfSfx">0</span>ms</div>
+        <div>Path: <span id="perfPath">0</span>ms</div>
+        <div>AI: <span id="perfAI">0</span>ms</div>
+        <button class="btn" id="perfClose">Close</button>
       </main>
     </div>
   </div>
@@ -234,6 +249,7 @@
     <script defer src="./scripts/dustland-nano.js"></script>
     <script defer src="./scripts/dustland-engine.js"></script>
     <script defer src="./scripts/fx-debug.js"></script>
+    <script defer src="./scripts/perf-debug.js"></script>
   <script>
     const params = new URLSearchParams(location.search);
     const isAck = params.get('ack-player') === '1';
