feat: add boot log file

--- a/dustland.html
+++ b/dustland.html
@@ -248,6 +248,7 @@
     <script defer src="./scripts/dustland-path.js"></script>
     <script defer src="./scripts/dustland-nano.js"></script>
     <script defer src="./scripts/dustland-engine.js"></script>
+    <script defer src="./scripts/version-log.js"></script>
     <script defer src="./scripts/fx-debug.js"></script>
     <script defer src="./scripts/perf-debug.js"></script>
   <script>
