--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -335,6 +335,7 @@
           <label>Name<input id="npcName" /></label>
           <label>Description<textarea id="npcDesc" rows="2"></textarea></label>
           <label>Color<input id="npcColor" type="color" value="#9ef7a0" /></label>
+          <label>Symbol<input id="npcSymbol" maxlength="1" value="!" /></label>
           <label>Map<input id="npcMap" value="world" /></label>
           <label>X<input id="npcX" type="number" min="0" /></label>
           <label>Y<input id="npcY" type="number" min="0" /></label>
