--- a/dustland.html
+++ b/dustland.html
@@ -168,6 +168,7 @@
       </header>
       <main id="dialogText"></main>
       <div class="choices" id="choices"></div>
+      <button id="persistLLM" class="btn small">Persist LLM</button>
     </div>
   </div>
 
@@ -235,6 +236,7 @@
     <script defer src="./scripts/core/equipment.js"></script>
     <script defer src="./scripts/core/actions.js"></script>
     <script defer src="./scripts/core/movement.js"></script>
+    <script defer src="./scripts/dialog-persist.js"></script>
     <script defer src="./scripts/core/dialog.js"></script>
     <script defer src="./scripts/core/combat.js"></script>
     <script defer src="./scripts/core/party.js"></script>
