test: cover Persist LLM visibility

--- a/dustland.html
+++ b/dustland.html
@@ -168,7 +168,7 @@
       </header>
       <main id="dialogText"></main>
       <div class="choices" id="choices"></div>
-      <button id="persistLLM" class="btn small">Persist LLM</button>
+      <button id="persistLLM" class="btn small" style="display:none">Persist LLM</button>
     </div>
   </div>
 
