feat: add personas and playtests

--- a/balance-tester.html
+++ b/balance-tester.html
@@ -23,6 +23,7 @@
       <div class="content" id="log"></div>
       <div class="content">
         <div class="hud">
+          <div id="weatherBanner" class="weather-banner" hidden></div>
           <div class="badge">
             <div class="label">HP <span id="hp">10</span></div>
             <div class="hudbar" id="hpBar">
