--- a/dustland.html
+++ b/dustland.html
@@ -23,6 +23,7 @@
       <div class="content" id="log"></div>
       <div class="content">
         <div class="hud">
+          <div id="weatherBanner" class="weather-banner" hidden></div>
           <div class="badge">
             <div class="label">HP <span id="hp">10</span></div>
             <div class="hudbar" id="hpBar" role="progressbar" aria-label="Health" aria-valuemin="0" aria-valuemax="10" aria-valuenow="10">
@@ -242,6 +243,7 @@
     <script defer src="./scripts/core/party.js"></script>
     <script defer src="./scripts/core/quests.js"></script>
     <script defer src="./scripts/core/npc.js"></script>
+    <script defer src="./scripts/core/personas.js"></script>
     <script defer src="./data/skills/trainer-upgrades.js"></script>
     <script defer src="./scripts/trainer-ui.js"></script>
     <script defer src="./scripts/dustland-core.js"></script>
