fix: preserve NPC title in adventure kit

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -347,6 +347,7 @@
           <div id="npcEditor" style="display:none">
           <label>ID<input id="npcId" placeholder="npc_id" /></label>
           <label>Name<input id="npcName" placeholder="NPC name" /></label>
+          <label>Title<input id="npcTitle" placeholder="NPC title" /></label>
           <label>Description<textarea id="npcDesc" rows="2"></textarea></label>
           <label>Color<input id="npcColor" type="color" value="#9ef7a0" /></label>
           <label>Symbol<input id="npcSymbol" maxlength="1" value="!" /></label>
