--- a/balance-tester.html
+++ b/balance-tester.html
@@ -41,10 +41,10 @@
           <div class="badge">Map: <span id="mapname">—</span></div>
         </div>
         <p class="muted" style="margin-top:10px">Controls: <b>WASD/Arrows</b> move • <b>E/Space</b> interact/door & take nearby item • <b>T/G</b> take item • <b>I</b> Inventory • <b>P</b> Party • <b>Q</b> Quests • <b>O</b> audio • <b>C</b> mobile controls • <b>M</b> minimap • <b>Esc</b> close</p>
-        <div class="tabs">
-          <div class="tab active" id="tabInv">Inventory</div>
-          <div class="tab" id="tabParty">Party</div>
-          <div class="tab" id="tabQuests">Quests</div>
+        <div class="tabs" role="tablist">
+          <div class="tab active" id="tabInv" role="tab" tabindex="0" aria-label="Inventory" aria-selected="true">Inventory</div>
+          <div class="tab" id="tabParty" role="tab" tabindex="0" aria-label="Party" aria-selected="false">Party</div>
+          <div class="tab" id="tabQuests" role="tab" tabindex="0" aria-label="Quests" aria-selected="false">Quests</div>
         </div>
         <div class="tabwrap" id="tabWrap">
           <div id="inv"></div>
