--- a/balance-tester.html
+++ b/balance-tester.html
@@ -71,6 +71,7 @@
         <button class="btn" id="nanoToggle">Nano Dialog</button>
         <button class="btn" id="audioToggle">Audio: On</button>
         <button class="btn" id="mobileToggle">Mobile Controls: Off</button>
+        <button class="btn" id="tileCharToggle">ASCII Tiles: On</button>
         <button class="btn" id="settingsClose">Close</button>
       </main>
     </div>
