feat: add multi-room building wizard

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -668,8 +668,11 @@
     <script defer src="./components/wizard/steps/asset-picker.js"></script>
     <script defer src="./components/wizard/steps/map-placement.js"></script>
     <script defer src="./components/wizard/steps/item-picker.js"></script>
+    <script defer src="./components/wizard/steps/tilemap-picker.js"></script>
+    <script defer src="./components/wizard/steps/door-linker.js"></script>
     <script defer src="./components/wizard/steps/confirm.js"></script>
     <script defer src="./components/wizard/npc-wizard.js"></script>
+    <script defer src="./scripts/wizard-building.js"></script>
     <script defer src="./scripts/adventure-kit.js"></script>
   </body>
 
