--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -466,6 +466,7 @@
           </div>
           <canvas id="bldgCanvas" width="192" height="160" style="margin-top:4px"></canvas>
           <label>Interior<select id="bldgInterior"></select></label>
+          <label><input type="checkbox" id="bldgBoarded"> Boarded</label>
           <button class="btn" id="addBldg">Add Building</button>
           <button class="btn" type="button" id="cancelBldg" style="display:none">Cancel</button>
           <button class="btn" id="delBldg" style="display:none">Remove Building</button>
