feat: show scrap in shop

--- a/dustland.html
+++ b/dustland.html
@@ -281,6 +281,7 @@
     <div class="shop-window">
       <header>
         <div id="shopName"></div>
+        <div id="shopScrap"></div>
         <button id="closeShopBtn" class="btn">Close</button>
       </header>
       <div class="shop-panels">
