feat: add brush size slider to noise painting

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -304,6 +304,7 @@
             <div id="paletteLabel"></div>
           </div>
           <button class="btn" id="noiseToggle" title="Toggle organic brush noise">Noise: On</button>
+          <label for="brushSize">Brush Size <input type="range" id="brushSize" min="1" max="10" value="1"><span id="brushSizeLabel">1</span></label>
         </div>
         <div class="btn-group">
           <div style="padding:0px 13px 0px 0px;font-family: sans-serif;">
