--- a/balance-tester.html
+++ b/balance-tester.html
@@ -56,6 +56,7 @@
           <button class="btn" id="loadBtn">Load</button>
           <button class="btn" id="resetBtn">Reset</button>
           <button class="btn" id="settingsBtn">Settings</button>
+          <button class="btn" id="screenshotBtn" hidden>Screenshot</button>
         </div>
         </div>
       </aside>
@@ -169,6 +170,8 @@
   <script defer src="./scripts/core/party.js"></script>
   <script defer src="./scripts/core/quests.js"></script>
   <script defer src="./scripts/core/npc.js"></script>
+  <script defer src="./components/dial.js"></script>
+  <script defer src="./scripts/radio-tower-puzzle.js"></script>
   <script defer src="./scripts/dustland-core.js"></script>
   <script defer src="./scripts/core/event-flags.js"></script>
   <script defer src="./scripts/dustland-path.js"></script>
