--- a/dustland.html
+++ b/dustland.html
@@ -58,6 +58,7 @@
           <button class="btn" id="settingsBtn">Settings</button>
           <button class="btn" id="fxBtn">FX</button>
           <button class="btn" id="perfBtn">Perf</button>
+          <button class="btn" id="screenshotBtn" hidden>Screenshot</button>
         </div>
         </div>
       </aside>
@@ -245,6 +246,8 @@
     <script defer src="./scripts/core/quests.js"></script>
     <script defer src="./scripts/core/npc.js"></script>
     <script defer src="./scripts/core/personas.js"></script>
+    <script defer src="./components/dial.js"></script>
+    <script defer src="./scripts/radio-tower-puzzle.js"></script>
     <script defer src="./data/skills/trainer-upgrades.js"></script>
     <script defer src="./scripts/trainer-ui.js"></script>
     <script defer src="./scripts/dustland-core.js"></script>
