test: cover NPC templates tooltip

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -590,7 +590,7 @@
         </div>
       </fieldset>
       <fieldset class="card" id="templateCard" data-pane="templates" style="display:none">
-        <legend>NPC Templates</legend>
+        <legend>NPC Templates <span class="help" title="Templates for enemies that can spawn from dialog">(?)</span></legend>
         <div class="list" id="templateList"></div>
         <button class="btn" type="button" id="newTemplate">+ Template</button>
         <div id="templateEditor" style="display:none">
