feat: expose item desc and npc portrait lock

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -364,6 +364,7 @@
             <span class="pill">Portrait</span>
             <span class="pill" id="npcNextP">&gt;</span>
           </div>
+          <label><input type="checkbox" id="npcPortraitLock" checked> Lock Portrait</label>
           <label><input type="checkbox" id="npcHidden"> Hidden NPC</label>
           <div id="revealOpts" style="display:none">
             <label>Flag Type<select id="npcFlagType"><option value="visits">Visited Tile</option><option value="party">Party Flag</option></select></label>
@@ -426,6 +427,7 @@
           <label>Name<input id="itemName" placeholder="Item name" /></label>
           <label>ID<input id="itemId" placeholder="item_id" /></label>
           <label>Type<input id="itemType" /></label>
+          <label>Description<textarea id="itemDesc" rows="2"></textarea></label>
           <label>Tags<input id="itemTags" /></label>
           <label>Map<input id="itemMap" value="world" /></label>
           <label>X<input id="itemX" type="number" min="0" /></label>
