feat: add radio events module and tests

--- a/dustland.html
+++ b/dustland.html
@@ -245,9 +245,11 @@
     <script defer src="./scripts/core/party.js"></script>
     <script defer src="./scripts/core/quests.js"></script>
     <script defer src="./scripts/core/npc.js"></script>
+    <script defer src="./scripts/game-state.js"></script>
     <script defer src="./scripts/core/personas.js"></script>
     <script defer src="./components/dial.js"></script>
     <script defer src="./scripts/radio-tower-puzzle.js"></script>
+    <script defer src="./scripts/radio-events.js"></script>
     <script defer src="./data/skills/trainer-upgrades.js"></script>
     <script defer src="./scripts/trainer-ui.js"></script>
     <script defer src="./scripts/dustland-core.js"></script>
