feat: enable NPC locks in adventure kit

--- a/adventure-kit.html
+++ b/adventure-kit.html
@@ -380,6 +380,7 @@
           </div>
           <label><input type="checkbox" id="npcPortraitLock" checked> Lock Portrait</label>
           <label><input type="checkbox" id="npcHidden"> Hidden NPC</label>
+          <label><input type="checkbox" id="npcLocked"> Locked NPC</label>
           <div id="revealOpts" style="display:none">
             <label>Flag Type<select id="npcFlagType"><option value="visits">Visited Tile</option><option value="party">Party Flag</option></select></label>
             <div id="revealVisit">
